# libtatini

./: .gitignore  CMakeLists.txt  README.md  bar.ini  foo.ini
include/: tat_bini.h  tat_bini_infos.h
libbini/: CMakeLists.txt  bini.c  bini_infos.c  bini_types.h  mempool.c  tat_bini.c
libbini/include/: tat_bini.h  tat_bini_infos.h
libbini/include/tat/: bini.h  bini_infos.h
libtatini/: CMakeLists.txt  infos.c  libtat_mempool.c  libtatini.c  libtatini_infos.c  libtatini_types.h  mempool.c
libtatini/include/tat/: libtatini.h  libtatini_infos.h  libtatini_mempool.h  mempool.h
src/: CMakeLists.txt  cli_args.c  cli_args.h  defines.in.h  main.c
src/libbini/: CMakeLists.txt  bini.c  bini.h  memchunk.c
tat/: CMakeLists.txt  memory_pool.c
tat/include/tat/: memory_pool.h
